trying to integrate everything in html
-emphasis on "trying"

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>TAMATOKEN! - not quite a Tamagotchi</title>
     <script src="p5.min.js"></script>
     <script src="p5setup.js"></script>
+    <script src="gsap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="tamagotchi.css" />
   </head>
   <body>
-    <script window.src="tamagotchi.js"></script>
-    <script window.src="ColonyClass.js"></script>
-    <script window.src="FeederClass.js"></script>
-    <script window.src="IndividualClass.js"></script>
+    <script src="tamagotchi.js"></script>
+    <script src="ColonyClass.js"></script>
+    <script src="FeederClass.js"></script>
+    <script src="IndividualClass.js"></script>
   </body>
 </html>
