--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <title>TAMATOKEN! - not quite a Tamagotchi</title>
-    <script src="p5.min.js"></script>
-    <script src="p5setup.js"></script>
-    <script src="gsap.min.js"></script>
+    
+    <script src="./html/p5.min.js"></script>
+    <script src="./html/p5setup.js"></script>
+    <!-- <script src="./html/gsap.min.js"></script> -->
+    <script type="module" src="tamagotchi.js"></script>
+    
     <link rel="stylesheet" type="text/css" href="tamagotchi.css" />
   </head>
-  <body>
-    <script src="tamagotchi.js"></script>
-    <script src="ColonyClass.js"></script>
-    <script src="FeederClass.js"></script>
-    <script src="IndividualClass.js"></script>
-  </body>
+
 </html>
