--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <script src="./html/p5.min.js"></script>
     <script src="./html/p5setup.js"></script>
-    <!-- <script src="./html/gsap.min.js"></script> -->
+    <script src="./html/gsap.min.js"></script>
     <script type="module" src="tamagotchi.js"></script>
     
     <link rel="stylesheet" type="text/css" href="tamagotchi.css" />
